--- a/assets/main.css
+++ b/assets/main.css
@@ -1,11 +1,7 @@
 div {
-   background-color: white;    
-
-   /* transition the background-color over 1s with a linear animation */
+   background-color: red;    
    transition: background-color 1s linear;
 }
-
-/* the :hover that causes the background-color to change */
 div:hover {
    background-color: transparent;      
 }
